numerix/error.txt
file:///C:/Users/USUARIO/Documentos/Santiago.SENA/Prof.Miguel/numerologia/controllers/mercadoPagoController.js:1
import { userSchema } from "../schemas/userSchema.js"; // or wherever user logic is
         ^^^^^^^^^^
SyntaxError: The requested module '../schemas/userSchema.js' does not provide an export named 'userSchema'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:180:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:263:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:578:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:116:5)

Node.js v22.14.0
